force-app/main/default/objects/OpportunityTeamMember/fields/BR__c.field-meta.xml
<CustomField>
    <fullName>BR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BR</label>
    <type>Checkbox</type>
</CustomField>