force-app/main/default/objects/OpportunityTeamMember/fields/Creator_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Creator_Team_Member__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to determine if email alert should be sent out. Creator of opportunity does not need an email alert</description>
    <inlineHelpText>Used to determine if email alert should be sent out. Creator of opportunity does not need an email alert</inlineHelpText>
    <label>Creator = Team Member</label>
    <type>Checkbox</type>
</CustomField>