force-app/main/default/objects/OpportunityTeamMember/fields/Distributor_Created__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Created__c</fullName>
    <formula>if(CreatedBy.External_Partner__c = true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Created</label>
    <type>Checkbox</type>
</CustomField>