force-app/main/default/objects/OpportunityTeamMember/fields/Non_Community_SPA__c.field-meta.xml
<CustomField>
    <fullName>Non_Community_SPA__c</fullName>
    <formula>if( Opportunity__r.Distributor_Account__c  = true,false,true)</formula>
    <label>Non Community SPA</label>
    <type>Checkbox</type>
</CustomField>