force-app/main/default/objects/OpportunityTeamMember/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Custom</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Team</relationshipLabel>
    <relationshipName>Opportunity_Team</relationshipName>
    <type>Lookup</type>
</CustomField>