force-app/main/default/objects/OpportunityTeamMember/fields/Opportunity_Team_Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Member_Email__c</fullName>
    <formula>User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Team Member Email</label>
    <type>Text</type>
</CustomField>