force-app/main/default/objects/OpportunityTeamMember/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Quote.Specialty_Spa__c</field>
            <operation>notEqual</operation>
            <value>FTB, Demo</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunity Team</relationshipLabel>
    <relationshipName>Opportunity_Team</relationshipName>
    <type>Lookup</type>
</CustomField>