force-app/main/default/objects/OpportunityTeamMember/fields/Set_Email__c.field-meta.xml
<CustomField>
    <fullName>Set_Email__c</fullName>
    <formula>if(Email2__c &lt;&gt;&quot;&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Email</label>
    <type>Checkbox</type>
</CustomField>